# Haskell

./: .gitignore
CookBook/applicative/: applicative.cabal
CookBook/applicative/src/: Main.hs
CookBook/binary-tree-applicative/: LICENSE  binary-tree-applicative.cabal
CookBook/binary-tree-functor/: binary-tree-functor.cabal
CookBook/binary-tree-functor/src/: Main.hs
CookBook/data-type-with-function/: data-type-with-function.cabal
CookBook/either/: either.cabal
CookBook/functor/: functor.cabal
CookBook/maybe/: README.md
CookBook/monoid/: monoid.cabal
CookBook/quadratic/: .gitignore  ChangeLog.md  package.yaml
CookBook/reverse/: .gitignore  ChangeLog.md  package.yaml
CookBook/sort/: .gitignore
CookBook/type-class/: README.md  type-class.cabal
Data/hunt/: 1st.hs  input.txt
Data/mongo/: mon.hs
FP/Det/: det.hs  det2.hs
FP/Diff/: diff.hs
FP/Intro/: 1st.hs  Numbers2Words.lhs
FP/List/: List.lhs
FP/Monad/: ToInt.hs  bool.hs  lessthan.hs  maybe.hs
FP/Numbers/: 3rd.hs  3rd.lhs
FP/Prime/: prime.csv  prime.hs
FP/Proof/: 6th.hs
FP/Sudoku/: 5th.hs
HWord/: README.md  test.hs
Hard/: func.hs  intro.hs  rational.hs
Learn/: caesar.hs  haystack.hs  hof.hs  list.hs  listfunc.hs  module.hs  recursion.hs  sort.hs  test_eager.hs  test_lazy.hs  traffic.hs  vector.hs  word.hs
ML/: lda.hs
Math/: indi.hs
Numeric/: orbit.hs  plot.jl
Tutorial/: caesar.hs  list.hs  quick.hs  quiz.hs  recursion.hs  test.hi  test.hs  triads.hs
Web/: cskim.html  hss.hs  http.hs  nexus.html  stream.hs  test.hs
chart/: Autodiff.hs  ex.hs  hubble.hs
(+77 files in other folders)
