name:                binary-tree-functor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Axect/binary-tree-functor#readme
license:             BSD3
license-file:        LICENSE
author:              Tae Geun Kim
maintainer:          edeftg@gmail.com
copyright:           2018 Tae Geun Kim
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable binary-tree-functor
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
